<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Unigrid Hedgehog Parent</name>
	<groupId>org.unigrid.hedgehog</groupId>
	<artifactId>hedgehog-parent</artifactId>
	<version>0.0.8-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<lombok.version>1.18.48</lombok.version>
		<picocli.version>4.7.7</picocli.version>
		<jmockit.version>1.56.0</jmockit.version>
		<jacoco.version>0.8.15</jacoco.version>
		<surefireArgLine />
		<dryRun>false</dryRun>
	</properties>
	<scm>
		<developerConnection>scm:git:https://github.com/unigrid-project/hedgehog.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>
	<modules>
		<module>application</module>
		<module>common</module>
		<module>native-image</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>2.22.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.harawata</groupId>
				<artifactId>appdirs</artifactId>
				<version>1.5.0</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.6.4</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.20</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>2.0.20</version>
			</dependency>
			<!-- Only shazamcrest pulls JUnit 4 in, at 4.11, and surefire refuses anything older than 4.12. -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>require-java-25</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>[25,)</version>
									<message>Hedgehog builds on JDK 25 or later; point JAVA_HOME at one.</message>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<tagNameFormat>v@{project.version}</tagNameFormat>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<dryRun>${dryRun}</dryRun>
						<preparationGoals>clean verify</preparationGoals>
						<pushChanges>false</pushChanges>
						<scmDevelopmentCommitComment>Open the next development version</scmDevelopmentCommitComment>
						<scmReleaseCommitComment>Release @{releaseLabel}</scmReleaseCommitComment>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
					<executions>
						<execution>
							<id>pre-unit-test</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<configuration>
								<destFile>target/jacoco.exec</destFile>
								<propertyName>surefireArgLine</propertyName>
								<append>true</append>
							</configuration>
						</execution>
						<execution>
							<id>pre-invoker-test</id>
							<phase>pre-integration-test</phase>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<configuration>
								<destFile>target/jacoco.exec</destFile>
								<propertyName>invoker.mavenOpts</propertyName>
								<append>true</append>
							</configuration>
						</execution>
						<execution>
							<id>default-report</id>
							<goals>
								<goal>report</goal>
							</goals>
							<configuration>
								<dataFile>${project.basedir}/target/jacoco.exec</dataFile>
								<outputDirectory>${project.basedir}/target/jacoco-results/</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.6.2</version>
					<executions>
						<execution>
							<id>get-cpu-count</id>
							<goals>
								<goal>cpu-count</goal>
							</goals>
							<configuration>
								<cpuCount>system.numcores</cpuCount>
								<factor>0.3</factor>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<argLine>
							@{surefireArgLine}
							-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
							-Dorg.jboss.netty.debug=true
							--enable-native-access=ALL-UNNAMED
						</argLine>
						<trimStackTrace>false</trimStackTrace>
						<reuseForks>false</reuseForks>
						<forkCount>${system.numcores}</forkCount>
						<systemPropertyVariables>
							<testoutput.target>${project.build.directory}</testoutput.target>
						</systemPropertyVariables>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.16.0</version>
					<configuration>
						<showDeprecation>true</showDeprecation>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<configLocation>../checkstyle.xml</configLocation>
						<excludes>**/module-info.java</excludes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>14.1.0</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>pl.gdela</groupId>
					<artifactId>socomo-maven</artifactId>
					<version>2.4.0</version>
					<dependencies>
						<dependency>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm</artifactId>
							<version>9.10.1</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<goals>
								<goal>analyze</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.16.0</version>
				<configuration>
					<includeTests>true</includeTests>
					<targetJdk>17</targetJdk>
					<rulesets>
						<ruleset>${project.basedir}/pmd.xml</ruleset>
					</rulesets>
				</configuration>

			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.10.4.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>
